# telegram-analyser

./: README.md  pyproject.toml
config/: .env_example  config_file.py
src/: LLMEngine.py  logger.py  main.py  message_analyser.py  telegram_reader.py  test.py
